--- a/about.htm
+++ b/about.htm
@@ -40,7 +40,7 @@ img.chil {
 </div>
 <div class="content">
 	<h2>Who Cheryl is</h2>
-    		<p><img class="mine" src="sisters.jpg" alt="Cheryl Repal's Profile Picture, a graphic designer and a Sunday school teacher" style="width:250px;height:260px;margin-right:20px;">Hi there, I'm Cheryl. To put it simply, my parents are Deolita Moncada and Pablito Repal, and I am their third child. First day of life was on December 15, 1981, in Masbate, Philippines. I have two elder sisters, two younger sisters, and one younger brother.
+    		<p><img class="mine" src="sisters.jpg" alt="Cheryl posing with her sisters" style="width:300px;height:200px;margin-right:20px;">Hi there, I'm Cheryl. To put it simply, my parents are Deolita Moncada and Pablito Repal, and I am their third child. First day of life was on December 15, 1981, in Masbate, Philippines. I have two elder sisters, two younger sisters, and one younger brother.
 	</p>
 <p>Because of the impression our Papa had on me as a youngster, I aspired to be a civil engineer. My older sister and I helped our father renovate our family home when we were younger. I learnt and like carpentry because of this. I developed the notion that "I can achieve anything" through this experience. I used to believe that if other people could accomplish it, so could I. As a result, no matter how severe the situation grew, I did not seek assistance from anybody.
 <br><br>
