--- a/about.htm
+++ b/about.htm
@@ -55,7 +55,7 @@ After eleven months, our mother died away, adding to my sorrow. My three younger
 <img class="chil" src="children.jpg" alt="Cheryl teaching kids during Vacation Bible School" style="width:300px;height:200px;margin-right:20px;">
 My Ate Joy asked me to teach children in our Sunday school in 2003, but I declined because I did not feel I was competent. I am an introverted person with little compassion for children. When someone is really loud, I am quickly irritated. However, God called me to teach, and I've been doing it for almost two decades now. He gave me everything I needed to do the work.
 <br><br>
-I took an extensive theology education at Freedom School of Theology (FSOT) in 2009. In 2011, I attended BBCA's Manila Campus to get an associate degree in Christian Education. I enrolled in the Bachelor of Secondary Education in Mathematics in 2013 at Global Reciprocal Colleges, but was unable to finish it.
+I took an extensive theology education at Freedom School of Theology (FSOT) in 2009. In 2011, I attended BBCA's Manila Campus to get an associate degree in Christian Education. I enrolled in the Bachelor of Secondary Education - Major in Mathematics in 2013 at Global Reciprocal Colleges, but was unable to finish it.
 <br><br>
 My first encounter with graphic design was at our church. I'm responsible for updating our church's bulletin. Initially, I used PowerPoint to create visuals. Later on, I became familiar with Adobe Photoshop. But when I worked as a graphic designer for my sister's small printing shop, I expanded my knowledge in the area.
 <br><br>
